# saweather-data-exploration

./: .gitignore  README.md  pyproject.toml
docs/: index.html
notebooks/: check_station_data.ipynb  modis_land_surface_temp.ipynb  modis_lst_L2.ipynb  pyorbital_testing.ipynb  station_data.ipynb  station_to_gridded.ipynb
src/data_exploration/: __init__.py  loading.py  utils.py  viz.py
