[project]
name = "data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke", email = "gregorl@ethz.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.2.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "xarray>=2025.1.2",
    "zarr>=3.0.4",
]

[project.scripts]
data-exploration = "data_exploration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
