[project]
name = "data-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke", email = "gregorl@ethz.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "adlfs>=2024.12.0",
    "dask>=2025.2.0",
    "earthaccess>=0.14.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "h5netcdf>=1.5.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "munch>=4.0.0",
    "nbformat>=5.10.4",
    "odc-stac>=0.3.11",
    "pandas>=2.2.3",
    "planetary-computer>=1.0.0",
    "plotly>=6.0.0",
    "pyarrow>=19.0.1",
    "pyhdf>=0.11.6",
    "pyorbital>=1.9.2",
    "rich>=13.9.4",
    "rioxarray>=0.18.2",
    "stackstac>=0.5.1",
    "xarray>=2025.1.2",
    "zarr>=3.0.4",
]

[project.scripts]
data-exploration = "data_exploration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
